# LeatherCAM

./: .gitignore  AGENTS.md  Makefile  PLAN.md  PROGRESS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
leathercam/: __init__.py  __main__.py  app.py  job.py  project.py
leathercam/cam/: __init__.py  metrics.py  pocket.py  profile.py  raster.py  vcarve.py
leathercam/gcode/: __init__.py  postprocessor.py
leathercam/grbl/: __init__.py  ports.py  transport.py
leathercam/image/: __init__.py  preprocess.py
leathercam/preview/: __init__.py  toolpath_2d.py  toolpath_iso.py
leathercam/profiles/: __init__.py  defaults.py  models.py  store.py
leathercam/ui/: machine_dialog.py  main_window.py  preview_view.py
leathercam/vector/: __init__.py  dxf.py  grouping.py  svg.py  transform.py  types.py
packaging/: build-appimage.sh  leathercam.desktop  leathercam.iss  leathercam.spec
tests/: conftest.py  test_cam_metrics.py  test_cam_pocket.py  test_cam_profile.py  test_cam_raster.py  test_cam_vcarve.py  test_gcode_postprocessor.py  test_grbl_transport.py  test_image_preprocess.py  test_job.py  test_job_profile.py  test_package.py  test_preview_toolpath_2d.py  test_preview_toolpath_iso.py  test_profiles.py  test_project.py  test_ui_main_window.py  test_vector_dxf.py  test_vector_grouping.py  test_vector_svg.py  test_vector_transform.py  test_vector_types.py
