[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leathercam"
version = "0.1.0"
description = "CAM application for CNC 3018 (GRBL) — leather embossing clichés"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "floopyman", email = "floopyman007@gmail.com" }]
keywords = ["cnc", "cam", "gcode", "grbl", "leather", "embossing"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: X11 Applications :: Qt",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "PySide6>=6.6",
    "numpy>=1.26",
    "scipy>=1.11",
    "Pillow>=10.0",
    "opencv-python-headless>=4.8",
    "shapely>=2.0",
    "pyclipper>=1.3",
    "svgelements>=1.9",
    "ezdxf>=1.1",
    "pyserial>=3.5",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
dist = [
    "pyinstaller>=6.0",
]

[project.scripts]
leathercam = "leathercam.app:main"

[project.gui-scripts]
leathercam-gui = "leathercam.app:main"

[tool.hatch.build.targets.wheel]
packages = ["leathercam"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["build", "dist", ".venv"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle, pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
    "RUF",           # ruff-specific
    "N",             # pep8-naming
    "C4",            # comprehensions
    "PTH",           # use pathlib
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "N803"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = "leathercam.cam.*"
strict = true

[[tool.mypy.overrides]]
module = "leathercam.gcode.*"
strict = true
